Changes for 1.3:

 - added color selection for trigger severity 'warning' and 'information' (Eugene)
 - fixed limitation of return value for 'net.if.*' (Eugene)
 - fixed limitation of return value for 'vfs.dev.*' (Eugene)
 - fixed limitation of return value for 'system.cpu.intr' (Eugene)
 - fixed autoregistration in oracle system (Eugene)
 - fixed support of PostgreSQL (Eugene)
 - improved macro variables substitution in message body/subject (Eugene)
 - fixed order of displaying log files (Eugene)
 - added support of 'pfree' and 'pused' for 'vfs.fs.size' of windows (Eugene)
 - added '<=' comporator for trigger severity of action conditions (Eugene)
 - fixed problem with escape characters in triggers (Eugene)
 - fixed 'system.cpu.util[*]' for Tru64 (Eugene)
 - disabled exit code handling of UserParameter scripts (Eugene)
 - improved UserParameter substitution (Eugene)
 - improved definition of integer and float point types (Eugene)
 - fixed problem with ASN_IPADDRESS SNMP values (Eugene)
 - added action email action variable '{TRIGGER.SEVERITY}' (Eugene)
 - added Brazilian Portuguese translation. Thanks to Marcelo Honorio. (Alexei)
 - fixed history cleaning (Eugene)
 - fixed Unknown when selcting trigger severity Disaster in action form (Alexei)
 - fixed windows agent crashing with processing of 'system.cpu.util' key (Eugene)
 - fixed errors while adding a host to IT service (Alexei)
 - fixed warning in classes.inc.php while displaying graphs (Alexei)
 - fixed warning in trigger selection popup (Alexei)
 - added spec file for ZABBIX agent. Thanks to Alexey Zilber. (Alexei)
 - fixed count of problems displayin for submaps (Eugene)
 - added support of macro {TRIGGER.COMMENT} (Alexei)
 - added ZABBIX agent for Win64 platforms. (Eugene)
 - fixed incorrect disabling of actions while deleting a trigger (Alexei)
 - improved sound notification of trigger status changing (Eugene)
 - added alternative startup scripts for Fedora Linux (Alexei)